compiler/tests/compile-fail/no-main.arret

;~ ERROR no main! function defined in root module